2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed 
	pchart library bug with default value for
	forcetransparency attribute. Changed from NULL
	to -1

2011-03-31 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/functions_fsgraph.php: add
	to support and wip with new graph engine.

2011-03-31  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Improved 
	legend control and added limitation in showing
	xaxis data to one each 10 pixels

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Fixed bad 
	legend show condition

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* godmode/reporting/reporting_builder.item_editor.php: Removed the option
	to select 'show graph' in general reports

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Added features to 
	the vertical graphs function like colors, alpha values, legend...

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed a small problem passing 'width'
	parameter in 'top_n' reports

2011-03-30 Javier Lanz <javier.lanz@artica.es>
	* include/functions_reporting.php: Fixed a small problem when displaying
	only the graph and not the table for the exception report.

2011-03-30 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/*, include/graphs/fgraph.php:
	added first version of common graph libraries with Integria and Babel.

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed get_agentmodule_sla_array and
	added functionality to show the table, table+graph or only graph
	* include/pchart_graph.php: Fixed function graph_sla_horizontal
	* include/pandora_graph.php: Changed function graph_sla_horizontal
	prototype
	* include/fgraph.php: Deleted function graph_sla_pie, fixed function